Update and rename 012718raw_data_processing.RMD to 012718raw_data_processing.Rmd

--- a/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
+++ b/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
@@ -1,4 +1,4 @@
-##1/27/18
+## 1/27/18
 Raw mRNA sequencing libraries returned from the GSL are located at:
 
   /media/disk6/ARF/RNASEQ/rawreads/EWtarfiles && LGEPtarfiles
@@ -11,7 +11,7 @@ Within the EW directory there are 12 .tar files (96 biological samples)
         --Second set included 8 tar files labeled: GSL-047-A-Whetten-Pool1 && 2,3,4,5,6,7,8
    -- The names of directories were manually edited to be lane01:lane12 corresponding to Pool  
       
-1. Untar sequencing lanes
+*1. Untar sequencing lanes
     cd /media/disk6/ARF/RNASEQ/rawreads/EWtarfiles
     ls *.tar > EW.tar.list
     
@@ -23,7 +23,7 @@ Within the EW directory there are 12 .tar files (96 biological samples)
     
     while read file; do tar -xf ./$file --directory ../LGEPfasta/; done < LGEP.tar.list
     
- 2. Run fastqc on raw files
+ *2. Run fastqc on raw files
       #Change into each of the 12 directories; create list of .fastq.gz files; make fastqc output dir and run fastqc
       
    cd /media/disk6/ARF/RNASEQ/rawreads/EWfasta/lane10
@@ -45,7 +45,7 @@ Within the EW directory there are 12 .tar files (96 biological samples)
 ***Noticed there is rRNA contamination in Sample 71 in EW lane 09.***
 
 
-3. Remove rRNA contamination
+*3. Remove rRNA contamination
 ./indexdb_rna --ref ./rRNA_databases/silva-euk-18s-id95.fasta,./index/euk.18s.db -v
 
 ./sortmerna --ref ./rRNA_databases/silva-euk-18s-id95.fasta,./index/euk.18s.db  --reads /media/disk6/ARF/RNASEQ/rawreads/EWfasta/20151203-GSL-046-B-Whetten-Pool9/73_S24_L001_R1_001.fastq --aligned out.out --fastx
