--- a/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
+++ b/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
@@ -69,6 +69,15 @@
 
 *bbDuk can be used to do overall quality trim, as well as trim first 10 bases, remove adapters, and matches to rRNA.
 
+*Test it out on EW sample 84 from lane10
+```linux
+./software/bbmap/bbduk.sh -Xmx2g in=./rawreads/EWfasta/lane10/84_S29_L002_R1_001.fastq.gz out=./8429l2.fq.gz ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=1 ktrim=r k=25 mink=12 hdist=1 qtrim=rl trimq=20 minlength=50 maxlength=125
+```
+
+while read id; do /home/ross/software/bbmap/bbduk.sh -Xmx2g in=lane02_3_2/Sample_${id}.fastq.gz out=../filttrim_rep3/${id}2.fq.gz ref=/home/ross/software/bbmap/resources/truseq.fa.gz forcetrimleft=10 t=1 ktrim=r k=25 mink=12 hdist=1 qtrim=rl trimq=20 minlength=50 maxlength=125; done < <(ls lane02_3_2/*.gz |  sed 's%lane02_3_2/Sample_%%' | sed 's/.fastq.gz//' )
+
+
+./software/bbmap/bbduk.sh -Xmx2g in=./rawreads/EWfasta/lane10/84_S29_L002_R1_001.fastq.gz out=./8429l2.fq.gz ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=1 ktrim=r k=25 mink=12 hdist=1 qtrim=rl trimq=20 minlength=50 maxlength=125
 
 ```linux 
 
