--- a/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
+++ b/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
@@ -71,17 +71,23 @@
 
 *Test it out on EW sample 84 from lane10
 ```linux
-./software/bbmap/bbduk.sh -Xmx2g in=./rawreads/EWfasta/lane10/84_S29_L002_R1_001.fastq.gz out=./8429l2.fq.gz ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=1 ktrim=r k=25 mink=12 hdist=1 qtrim=rl trimq=20 minlength=50 maxlength=125
+  ./software/bbmap/bbduk.sh -Xmx2g in=./rawreads/EWfasta/lane10/84_S29_L002_R1_001.fastq.gz out=./8429l2.fq.gz ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=1 ktrim=r k=25 mink=12 hdist=1 qtrim=rl trimq=20 minlength=50 maxlength=125
+```
+*Initially Sample 84 had rRNA and adapter contamination.  After running bbduk there was still one overresprestned sequence which when blasted hit to a tumor response protein.  Since this is biologicaly relevenat it should be OK to stay.  We can use bbduk now to process all raw reads.
+
+*Article suggest low to minimium quality trimming works best: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4766705/
+Also minimum read length for DE expression roughly 50 works: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4531809/
+
+First run on the EW technical reps a single sample at a time
+```linux
+cd /media/disk6/ARF/RNASEQ
+while read file; do ./software/bbmap/bbduk.sh -Xmx2g in=./rawreads/EWfasta/lane01/$file out=./trimmedfiltreads/EW/lane01/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=20 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/EWfasta/lane01/lane01.list
 ```
 
-while read id; do /home/ross/software/bbmap/bbduk.sh -Xmx2g in=lane02_3_2/Sample_${id}.fastq.gz out=../filttrim_rep3/${id}2.fq.gz ref=/home/ross/software/bbmap/resources/truseq.fa.gz forcetrimleft=10 t=1 ktrim=r k=25 mink=12 hdist=1 qtrim=rl trimq=20 minlength=50 maxlength=125; done < <(ls lane02_3_2/*.gz |  sed 's%lane02_3_2/Sample_%%' | sed 's/.fastq.gz//' )
-
-
-./software/bbmap/bbduk.sh -Xmx2g in=./rawreads/EWfasta/lane10/84_S29_L002_R1_001.fastq.gz out=./8429l2.fq.gz ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=1 ktrim=r k=25 mink=12 hdist=1 qtrim=rl trimq=20 minlength=50 maxlength=125
-
-```linux 
-
-./indexdb_rna --ref ./rRNA_databases/silva-euk-18s-id95.fasta,./index/euk.18s.db -v
-
-./sortmerna --ref ./rRNA_databases/silva-euk-18s-id95.fasta,./index/euk.18s.db  --reads /media/disk6/ARF/RNASEQ/rawreads/EWfasta/20151203-GSL-046-B-Whetten-Pool9/73_S24_L001_R1_001.fastq --aligned out.out --fastx
+*Output is located at:
+```linux
+/media/disk6/ARF/RNASEQ/trimmedfiltreads/EW/lane01 
 ```
+
+All lanes are processed the same way by changing the lane numbers in the bbduk command.
+
