--- a/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
+++ b/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
@@ -13,7 +13,7 @@
      *Second set included 8 tar files labeled: GSL-047-A-Whetten-Pool1 && 2,3,4,5,6,7,8
   *The names of directories were manually edited to be lane01:lane12 corresponding to Pool  
       
-###### 1. Untar sequencing lanes
+##### 1. Untar sequencing lanes
 
 ```linux
     cd /media/disk6/ARF/RNASEQ/rawreads/EWtarfiles
@@ -29,7 +29,7 @@
     while read file; do tar -xf ./$file --directory ../LGEPfasta/; done < LGEP.tar.list
 ```    
 
-###### 2. Run fastqc on raw files
+##### 2. Run fastqc on raw files
       #Change into each of the 12 directories; create list of .fastq.gz files; make fastqc output dir and run fastqc
   
   ```linux 
@@ -51,7 +51,7 @@
 ***Noticed there is rRNA contamination in Sample 71 in EW lane 09.***
 
 
-###### 3. Remove rRNA contamination
+##### 3. Remove rRNA contamination
 
 *Accessed www.arb-silva.de and searched for Pinus taeda
 
