--- a/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
+++ b/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
@@ -81,7 +81,9 @@ Also minimum read length for DE expression roughly 50 works: https://www.ncbi.nl
 First run on the EW technical reps a single sample at a time
 ```linux
 cd /media/disk6/ARF/RNASEQ
-while read file; do ./software/bbmap/bbduk.sh -Xmx2g in=./rawreads/EWfasta/lane01/$file out=./trimmedfiltreads/EW/lane01/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=20 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/EWfasta/lane01/lane01.list
+while read file; do ./software/bbmap/bbduk.sh -Xmx2g in=./rawreads/EWfasta/lane02/$file out=./trimmedfiltreads/EW/lane02/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=5 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/EWfasta/lane02/lane02.list
+
+while read file; do ./software/bbmap/bbduk.sh -Xmx3g in=./rawreads/EWfasta/lane02/$file out=./trimmedfiltreads/EW/lane02/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=5 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/EWfasta/lane02/lane02.list
 ```
 
 *Output is located at:
@@ -91,3 +93,25 @@ while read file; do ./software/bbmap/bbduk.sh -Xmx2g in=./rawreads/EWfasta/lane0
 
 All lanes are processed the same way by changing the lane numbers in the bbduk command.
 
+##### 4. FastQC can be re-done on filtered and trimmed files
+
+##### 5. Aligning reads to 86K transcriptome with Salmon
+  #First index the 86k transcriptome:
+./software/Salmon/bin/salmon index -t ./references/Pita.86ktxptome.fasta -i ./references/Pita.86k -p 5 --perfectHash --type "quasi" -k 25
+
+#Salmon fld flags that it says are important for single end reads.  Need to loook into this further.
+
+while read file; do bioawk -c fastx '{ print length($seq) }' < ./$file  > $file.txt ; R -q -e "x <- read.csv('mean.txt',header=F);the.sum=summary(x);sd=sd(x[,1]);save.image($file.RData,compress=T)"  ; done < lane01.list
+./solfware/Salmon/bin/salmon quant --fldMean 113 --fldSD 7.8 --seqBias -r ./trimmedfiltreads/EW/lane01/15 -o output.counts -l U --numBootstraps 2
+  #Then align counts and place in counts folder
+  
+  
+##### 6. Aligning reads to 83K transcriptome with Salmon  
+  
+  ./software/Salmon/bin/salmon index -t ./references/Pita.83k.fa -i ./references/Pita.83k -p 5 --perfectHash --type "quasi" -k 25
+  
+ 
+##### 7. Align reads with bowtie to 86k
+
+
+  
