--- a/disk6directory/RNASEQ/rawreads/README
+++ b/disk6directory/RNASEQ/rawreads/README
@@ -1,1 +1,11 @@
-Includes raw reads and tar files of sequencing files
+Includes raw reads and tar files of sequencing files.
+
+EWtarfiles : Raw tar files obtained from EW batch
+
+LGEPtarfiles: Raw tar files obtained from LGEP batch
+
+EWfasta: Extracted tar files with name change
+    --Within each lane folder there is a fastqc folder which has fastqc results for all technical reps from that lane
+
+LGEPfasta: Extracted tar files with name change
+    --Within each lane folder there is a fastqc folder which has fastqc results for all technical reps from that lane
