--- a/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
+++ b/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
@@ -32,7 +32,7 @@
   *The names of directories were manually edited to be lane01:lane12 corresponding to Pool  
   
       
-##### 1. Untar sequencing lanes
+#### 1. Untar sequencing lanes
 
     ```linux
     cd /media/disk6/ARF/RNASEQ/rawreads/EWtarfiles
@@ -63,7 +63,7 @@
     ....
     ```
 
-##### 2. Run fastqc on raw files
+#### 2. Run fastqc on raw files
 
       #Change into each of the 12 directories; create list of .fastq.gz files; make fastqc output dir and run fastqc
   
@@ -102,7 +102,7 @@
 ***Noticed there is rRNA contamination in Sample 71 in EW lane 09.***
 
 
-##### 3. Remove rRNA contamination
+#### 3. Remove rRNA contamination
 
 *Accessed www.arb-silva.de and searched for Pinus taeda
 
@@ -144,9 +144,9 @@ First run on the EW technical reps a single sample at a time
 
 All lanes are processed the same way by changing the lane numbers in the bbduk command.
 
-##### 4. FastQC can be re-done on filtered and trimmed files
+#### 4. FastQC can be re-done on filtered and trimmed files
 
-##### 5. Aligning reads to 86K transcriptome with Salmon
+#### 5. Aligning reads to 86K transcriptome with Salmon
   #First index the 86k transcriptome:
 ./software/Salmon/bin/salmon index -t ./references/Pita.86ktxptome.fasta -i ./references/Pita.86k -p 5 --perfectHash --type "quasi" -k 25
 
@@ -157,12 +157,12 @@ while read file; do bioawk -c fastx '{ print length($seq) }' < ./$file  > $file.
   #Then align counts and place in counts folder
   
   
-##### 6. Aligning reads to 83K transcriptome with Salmon  
+#### 6. Aligning reads to 83K transcriptome with Salmon  
   
   ./software/Salmon/bin/salmon index -t ./references/Pita.83k.fa -i ./references/Pita.83k -p 5 --perfectHash --type "quasi" -k 25
   
  
-##### 7. Align reads with bowtie to 86k
+#### 7. Align reads with bowtie to 86k
 
 
   
