--- a/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
+++ b/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
@@ -99,7 +99,7 @@
  ```
     
     
-***Noticed there is rRNA contamination in Sample 71 in EW lane 09.***
+**Noticed there is rRNA contamination in Sample 71 in EW lane 09.***
 
 
 #### 3. Remove rRNA contamination
