--- a/disk6directory/RNASEQ/rawreads/README
+++ b/disk6directory/RNASEQ/rawreads/README
@@ -1,11 +1,13 @@
 Includes raw reads and tar files of sequencing files.
 
-EWtarfiles : Raw tar files obtained from EW batch
+Folders included within this directory:
 
-LGEPtarfiles: Raw tar files obtained from LGEP batch
+*EWtarfiles : Raw tar files obtained from EW batch
 
-EWfasta: Extracted tar files with name change
+*LGEPtarfiles: Raw tar files obtained from LGEP batch
+
+*EWfasta: Extracted tar files with name change
     --Within each lane folder there is a fastqc folder which has fastqc results for all technical reps from that lane
 
-LGEPfasta: Extracted tar files with name change
+*LGEPfasta: Extracted tar files with name change
     --Within each lane folder there is a fastqc folder which has fastqc results for all technical reps from that lane
