--- a/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
+++ b/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
@@ -172,6 +172,16 @@ cd /media/disk6/ARF/RNASEQ
 
 while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/EW/lane01/$file -i ./references/Pita.86k -o ./counts/86kSalmon/EW/lane01/$file -l U --numBootstraps 2; done < ./rawreads/EWfasta/lane01/lane01.list
 
+while read file; do ./software/bbmap/bbduk.sh -Xmx3g in=./rawreads/LGEPfasta/lane07/$file out=./trimmedfiltreads/LGEP/lane07/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=5 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/LGEPfasta/lane07/lane07.list; while read file; do ./software/bbmap/bbduk.sh -Xmx3g in=./rawreads/LGEPfasta/lane08/$file out=./trimmedfiltreads/LGEP/lane08/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=5 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/LGEPfasta/lane08/lane08.list
+
+
+while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane09/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane09/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane09/lane09.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane10/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane10/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane10/lane10.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane11/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane11/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane11/lane11.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane12/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane12/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane12/lane12.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane13/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane13/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane13/lane13.list;
+
+
+
+while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane14/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane14/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane14/lane14.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane15/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane15/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane15/lane15.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane16/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane16/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane16/lane16.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane17/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane17/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane17/lane17.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane18/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane18/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane18/lane18.list;
+
+
 ``` 
   #Then align counts and place in counts folder
   
