--- a/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
+++ b/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
@@ -7,9 +7,13 @@
  
   *Within the LGEP directory there are 18 .tar files (144 biological samples) and then an additional directory which    includes tar files from the first run of sequencing. The 18 tar files were delivered at two seperate times:
      
-  *First set included 6 tar files labeled: Project_20150504-GSL028B-Whetten-X1POOL && X2,X3,X4,X5,X6
+  *First set included 6 tar files labeled: 
       
-  *Second set included 12 tar files labeled: Project_20150615-GSL033A-Whetten-Y1POOL && 2,3,4,5,6 && Z1,Z2,Z3,Z4,Z5,Z6
+      -Project_20150504-GSL028B-Whetten-X1POOL && X2,X3,X4,X5,X6
+      
+  *Second set included 12 tar files labeled: 
+  
+      -Project_20150615-GSL033A-Whetten-Y1POOL && 2,3,4,5,6 && Z1,Z2,Z3,Z4,Z5,Z6
     
   *The names of directores where manually edited to be:
       
@@ -19,7 +23,7 @@
       
       -lane13:lane18 corresponding to Z1:Z6
      
-   *Note samepl ein lane12 tar file 11x really belongs to lane11 so it was moved there.
+   *Note sample in lane12 tar file 11x really belongs to lane11 so it was moved there.
      
 *Within the EW directory there are 12 .tar files (96 biological samples)
   
