--- a/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
+++ b/disk6directory/RNASEQ/rawreads/012718raw_data_processing.Rmd
@@ -1,4 +1,6 @@
-# 1/27/18
+# 1/27/18 - 1/29/18 Creating counts from raw reads
+
+## 1. Extract raw data
 
 ### Location of raw data
 
@@ -47,7 +49,7 @@
       -lane01:lane12 corresponding to Pool  
   
       
-## 1. Untar sequencing lanes
+### Untar sequencing lanes
 
  ```linux
  cd /media/disk6/ARF/RNASEQ/rawreads/EWtarfiles
@@ -78,7 +80,7 @@
  ....
  ```
 
-#### 2. Run fastqc on raw files
+## 2. Run fastqc on raw files
 
 *Change into each of the 12 directories; create list of .fastq.gz files; make fastqc output dir and run fastqc
   
@@ -112,12 +114,11 @@
  ...
  ...
  ```
-    
-    
+      
 **Noticed there is rRNA contamination in Sample 71 in EW lane 09.***
 
 
-#### 3. Remove rRNA contamination
+## 3. Remove rRNA contamination
 
 *Accessed www.arb-silva.de and searched for Pinus taeda
 
@@ -169,11 +170,17 @@ while read file; do ./software/bbmap/bbduk.sh -Xmx3g in=./rawreads/LGEPfasta/lan
 while read file; do ./software/bbmap/bbduk.sh -Xmx3g in=./rawreads/LGEPfasta/lane09/$file out=./trimmedfiltreads/LGEP/lane09/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=5 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/LGEPfasta/lane09/lane09.list
 ```
 
+*Multiple lanes ran one after the other:
+
+```linux
+while read file; do ./software/bbmap/bbduk.sh -Xmx3g in=./rawreads/LGEPfasta/lane07/$file out=./trimmedfiltreads/LGEP/lane07/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=5 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/LGEPfasta/lane07/lane07.list; while read file; do ./software/bbmap/bbduk.sh -Xmx3g in=./rawreads/LGEPfasta/lane08/$file out=./trimmedfiltreads/LGEP/lane08/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=5 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/LGEPfasta/lane08/lane08.list
+```
+
 All lanes are processed the same way by changing the lane numbers in the bbduk command.
 
-#### 4. FastQC can be re-done on filtered and trimmed files
+## 4. FastQC can be re-done on filtered and trimmed files
 
-#### 5. Aligning reads to 86K transcriptome with Salmon
+## 5. Aligning reads to 86K transcriptome with Salmon
 
 *First index the 86k transcriptome:
 
@@ -215,17 +222,13 @@ cd /media/disk6/ARF/RNASEQ
 
 while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/EW/lane01/$file -i ./references/Pita.86k -o ./counts/86kSalmon/EW/lane01/$file -l U --numBootstraps 2; done < ./rawreads/EWfasta/lane01/lane01.list
 
-while read file; do ./software/bbmap/bbduk.sh -Xmx3g in=./rawreads/LGEPfasta/lane07/$file out=./trimmedfiltreads/LGEP/lane07/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=5 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/LGEPfasta/lane07/lane07.list; while read file; do ./software/bbmap/bbduk.sh -Xmx3g in=./rawreads/LGEPfasta/lane08/$file out=./trimmedfiltreads/LGEP/lane08/$file ref=./software/bbmap/resources/truseq.fa.gz,./software/bbmap/resources/rRNA_lob_pine.fasta forcetrimleft=10 t=5 ktrim=r k=25 mink=12 hdist=1 hdist2=0 qtrim=rl trimq=20 minlength=50 ; done < ./rawreads/LGEPfasta/lane08/lane08.list
-
 while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane09/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane09/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane09/lane09.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane10/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane10/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane10/lane10.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane11/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane11/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane11/lane11.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane12/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane12/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane12/lane12.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane13/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane13/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane13/lane13.list;
 
 while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane14/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane14/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane14/lane14.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane15/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane15/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane15/lane15.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane16/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane16/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane16/lane16.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane17/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane17/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane17/lane17.list; while read file; do ./software/Salmon/bin/salmon quant --seqBias -r ./trimmedfiltreads/LGEP/lane18/$file -i ./references/Pita.86k -o ./counts/86kSalmon/LGEP/lane18/$file -l U -p 40 --numBootstraps 2; done < ./rawreads/LGEPfasta/lane18/lane18.list;
 ``` 
 *Then align counts and place in counts folder
   
- 
-#### 6. Align reads with bowtie to 86k 
-#### 7. Aligning reads to 83K transcriptome with Salmon  
+## 7. Aligning reads to 83K transcriptome with Salmon  
 ```linux
   ./software/Salmon/bin/salmon index -t ./references/Pita.83k.fa -i ./references/Pita.83k -p 5 --perfectHash --type "quasi" -k 25
 ```  
