--- a/disk6directory/RNASEQ/snps/012918processing_snps_notes.Rmd
+++ b/disk6directory/RNASEQ/snps/012918processing_snps_notes.Rmd
@@ -33,9 +33,9 @@ cd /media/disk6/ARF/RNASEQ
 *The below puts out a .bam file that is compressed. Note that when using samtools view "q" can be used to filter low quality reads. Should this be used?
 
 ```linux
-while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane01/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane01/$file; done < ./rawreads/EWfasta/lane01/lane01.list
+while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane01/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane01/$file; done < ./rawreads/EWfasta/lane01/lane01.list;while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane02/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane02/$file; done < ./rawreads/EWfasta/lane02/lane02.list;
 
-while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane03/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane03/$file; done < ./rawreads/EWfasta/lane03/lane03.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane04/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane04/$file; done < ./rawreads/EWfasta/lane04/lane04.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane05/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane05/$file; done < ./rawreads/EWfasta/lane05/lane05.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane06/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane06/$file; done < ./rawreads/EWfasta/lane06/lane06.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane07/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane07/$file; done < ./rawreads/EWfasta/lane07/lane07.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane08/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane08/$file; done < ./rawreads/EWfasta/lane08/lane08.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane09/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane09/$file; done < ./rawreads/EWfasta/lane09/lane09.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane10/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane10/$file; done < ./rawreads/EWfasta/lane10/lane10.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane11/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane11/$file; done < ./rawreads/EWfasta/lane11/lane11.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane12/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane12/$file; done < ./rawreads/EWfasta/lane12/lane12.list; 
+while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane03/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane03/$file; done < ./rawreads/EWfasta/lane03/lane03.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane04/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane04/$file; done < ./rawreads/EWfasta/lane04/lane04.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane05/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane05/$file; done < ./rawreads/EWfasta/lane05/lane05.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane06/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane06/$file; done < ./rawreads/EWfasta/lane06/lane06.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane07/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane07/$file; done < ./rawreads/EWfasta/lane07/lane07.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane08/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane08/$file; done < ./rawreads/EWfasta/lane08/lane08.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane09/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane09/$file; done < ./rawreads/EWfasta/lane09/lane09.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane10/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane10/$file; done < ./rawreads/EWfasta/lane10/lane10.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane11/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane11/$file; done < ./rawreads/EWfasta/lane11/lane11.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/EW/lane12/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/EW/lane12/$file; done < ./rawreads/EWfasta/lane12/lane12.list;while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane01/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane01/$file; done < ./rawreads/LGEPfasta/lane01/lane01.list;while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane02/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane02/$file; done < ./rawreads/LGEPfasta/lane02/lane02.list;while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane03/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane03/$file; done < ./rawreads/LGEPfasta/lane03/lane03.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane04/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane04/$file; done < ./rawreads/LGEPfasta/lane04/lane04.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane05/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane05/$file; done < ./rawreads/LGEPfasta/lane05/lane05.list; while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane06/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane06/$file; done < ./rawreads/LGEPfasta/lane06/lane06.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane07/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane07/$file; done < ./rawreads/LGEPfasta/lane07/lane07.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane08/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane08/$file; done < ./rawreads/LGEPfasta/lane08/lane08.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane09/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane09/$file; done < ./rawreads/LGEPfasta/lane09/lane09.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane10/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane10/$file; done < ./rawreads/LGEPfasta/lane10/lane10.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane11/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane11/$file; done < ./rawreads/LGEPfasta/lane11/lane11.list;  while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U ./trimmedfiltreads/LGEP/lane12/$file | ./software/samtools-1.6/samtools view -@ 60 -b1 - -o ./snps/86k/LGEP/lane12/$file; done < ./rawreads/LGEPfasta/lane12/lane12.list; 
 
 ```
 
