--- a/disk6directory/RNASEQ/snps/012918processing_snps_notes.Rmd
+++ b/disk6directory/RNASEQ/snps/012918processing_snps_notes.Rmd
@@ -43,6 +43,30 @@ while read file; do ./software/bowtie/bowtie2 -p 60 -x ./references/Pta.86k -U .
 
 ```
 
+
+```linux
+cd /media/disk6/ARF/RNASEQ/snps/86k/EW/lane01
+
+mkdir sort.rmdup
+
+while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane01/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane01/sort.rmdup/$file; done < ./rawreads/EWfasta/lane01/lane01.list
+
+while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane02/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane02/sort.rmdup/$file; done < ./rawreads/EWfasta/lane02/lane02.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane03/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane03/sort.rmdup/$file; done < ./rawreads/EWfasta/lane03/lane03.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane04/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane04/sort.rmdup/$file; done < ./rawreads/EWfasta/lane04/lane04.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane05/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane05/sort.rmdup/$file; done < ./rawreads/EWfasta/lane05/lane05.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane06/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane06/sort.rmdup/$file; done < ./rawreads/EWfasta/lane06/lane06.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane07/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane07/sort.rmdup/$file; done < ./rawreads/EWfasta/lane07/lane07.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane08/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane08/sort.rmdup/$file; done < ./rawreads/EWfasta/lane08/lane08.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane09/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane09/sort.rmdup/$file; done < ./rawreads/EWfasta/lane09/lane09.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane10/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane10/sort.rmdup/$file; done < ./rawreads/EWfasta/lane10/lane10.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane11/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane11/sort.rmdup/$file; done < ./rawreads/EWfasta/lane11/lane11.list; while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/EW/lane12/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/EW/lane12/sort.rmdup/$file; done < ./rawreads/EWfasta/lane12/lane12.list
+
+while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/LGEP/lane13/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/LGEP/lane13/sort.rmdup/$file; done < ./rawreads/LGEPfasta/lane13/lane13.list
+
+while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/LGEP/lane14/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/LGEP/lane14/sort.rmdup/$file; done < ./rawreads/LGEPfasta/lane14/lane14.list
+
+while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/LGEP/lane15/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/LGEP/lane15/sort.rmdup/$file; done < ./rawreads/LGEPfasta/lane15/lane15.list
+
+while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/LGEP/lane16/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/LGEP/lane16/sort.rmdup/$file; done < ./rawreads/LGEPfasta/lane16/lane16.list
+
+while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/LGEP/lane17/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/LGEP/lane17/sort.rmdup/$file; done < ./rawreads/LGEPfasta/lane17/lane17.list
+
+while read file; do ./software/samtools-1.6/samtools sort -m 5G -@ 20 ./snps/86k/LGEP/lane18/$file | ./software/samtools-1.6/samtools markdup -rs -@ 20 - ./snps/86k/LGEP/lane18/sort.rmdup/$file; done < ./rawreads/LGEPfasta/lane18/lane18.list
+
+```
+
 ## 2. Convert sam file to bam
 ## 3. Merge technical rep bam files
 ## 4. Sort biological rep bam file
